zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__increase_tiled_pane_sizes_with_stacked_resizes-3.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
assertion_line: 816
expression: snapshot
---
00 (C): ┌ Pane #1 ─────────────────────────────────────────────────────────────────────────────────────────┐┌ Pane #2 ─────────────────────────────────────────────────────────────────────────────────────────┐
01 (C): │                                                                                                  │┌ Pane #3 ─────────────────────────────────────────────────────────────────────────────────────────┐
02 (C): │                                                                                                  │┌ Pane #4 ─────────────────────────────────────────────────────────────────────────────────────────┐
03 (C): │                                                                                                  ││                                                                                                  │
04 (C): │                                                                                                  ││                                                                                                  │
05 (C): │                                                                                                  ││                                                                                                  │
06 (C): │                                                                                                  ││                                                                                                  │
07 (C): │                                                                                                  ││                                                                                                  │
08 (C): │                                                                                                  ││                                                                                                  │
09 (C): │                                                                                                  ││                                                                                                  │
10 (C): │                                                                                                  ││                                                                                                  │
11 (C): │                                                                                                  ││                                                                                                  │
12 (C): │                                                                                                  ││                                                                                                  │
13 (C): │                                                                                                  ││                                                                                                  │
14 (C): │                                                                                                  ││                                                                                                  │
15 (C): │                                                                                                  ││                                                                                                  │
16 (C): │                                                                                                  ││                                                                                                  │
17 (C): │                                                                                                  ││                                                                                                  │
18 (C): │                                                                                                  ││                                                                                                  │
19 (C): │                                                                                                  ││                                                                                                  │
20 (C): │                                                                                                  ││                                                                                                  │
21 (C): │                                                                                                  ││                                                                                                  │
22 (C): │                                                                                                  ││                                                                                                  │
23 (C): │                                                                                                  ││                                                                                                  │
24 (C): │                                                                                                  ││                                                                                                  │
25 (C): │                                                                                                  ││                                                                                                  │
26 (C): │                                                                                                  ││                                                                                                  │
27 (C): │                                                                                                  ││                                                                                                  │
28 (C): │                                                                                                  ││                                                                                                  │
29 (C): │                                                                                                  ││                                                                                                  │
30 (C): │                                                                                                  ││                                                                                                  │
31 (C): │                                                                                                  ││                                                                                                  │
32 (C): │                                                                                                  ││                                                                                                  │
33 (C): │                                                                                                  ││                                                                                                  │
34 (C): │                                                                                                  ││                                                                                                  │
35 (C): │                                                                                                  ││                                                                                                  │
36 (C): │                                                                                                  ││                                                                                                  │
37 (C): │                                                                                                  ││                                                                                                  │
38 (C): │                                                                                                  ││                                                                                                  │
39 (C): └──────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────┘

